2009-07-23  Marcus Meissner  <marcus@jet.franken.de>

	* shell.c,action.c,main.c:
	  --capture-tethered ported to be just --wait-event + downloading

          New --wait-event-and-download commandline option.

	  --capture-tethered and --wait-event-and-download take optional
	  counts or seconds, default is infinite waiting.

	  Added 3 new shell commands:
	  wait-event=x			(just like wait-event cmdline option, default 1)
	  capture-tethered=x		(just like capture-tethered cmdline option, default 1)
	  wait-event-and-download=x	(just like wait-event-and-download cmdline option, default 1)

2009-06-21  Marcus Meissner  <marcus@jet.franken.de>

	* main.c,action.c,shell.c: 
	  Added seperate --set-config-index and --set-config-value functions
	  for menu choice settings.

	* main.c: Save files with current umask, not 0600.
	* configure.ac: Build with large file support to allow saving files > 2GB.

2009-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* main.c: --wait-event=x now can wait for "x" events,
	  or 1 second timeouts. (so longest wait time will be "x" seconds).

2009-04-07  Marcus Meissner  <marcus@jet.franken.de>

	* actions.c: ctrl-c can abort tethered capture now
	* main.c, gp-params.c: Make --quiet disable the progress bar too,
	  and reduce --stdout --quiet capture output.

2008-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow to specify a camera by port.

	  For instance:
		gphoto2 --port usb:005,003 --capture-image


2008-05-24  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main.c,main.h,shell.c}:

	  --capture-image split into:

		--capture-image: just capture the image
		--capture-image-and-download:
			capture the image and download it.

2007-07-21  Marcus Meissner  <marcus@jet.franken.de>

	* implemented --capture-tethered 

2007-01-19  Marcus Meissner  <marcus@jet.franken.de>

	From Victor Wagner <vbwagner@users.sourceforge.net>
	* gphoto2/main.c: read hook script and
	  filename from settings file.
