@@ -85,6 +85,7 @@ static int  glob_debug = -1;
 char glob_cancel = 0;
 static int  glob_frames = 0;
 static int  glob_interval = 0;
+static int	glob_bulblength = 0;
 
 GPParams gp_params;
 
@@ -610,7 +611,7 @@ capture_generic (CameraCaptureType type, const char __unused__ *name, int downlo
 	CameraFilePath path, last;
 	char *pathsep;
 	int result, frames = 0;
-	time_t next_pic_time, now;
+	time_t next_pic_time, now, expose_end_time;
 	int waittime;
 
 	next_pic_time = time (NULL) + glob_interval;
@@ -624,6 +625,14 @@ capture_generic (CameraCaptureType type, const char __unused__ *name, int downlo
 				printf (_("Standing by waiting for SIGUSR1 to capture.\n"));
 		}
 	}
+
+	if(glob_bulblength) {
+		if (!(gp_params.flags & FLAGS_QUIET)) {
+			printf (_("Bulb mode enabled (exposure time: %ds).\n"),
+				glob_bulblength);
+		}
+	}
+
 	capture_now = 0;
 	signal(SIGUSR1, sig_handler_capture_now);
 	end_next = 0;
@@ -639,10 +648,37 @@ capture_generic (CameraCaptureType type, const char __unused__ *name, int downlo
 
 		fflush(stdout);
 
-		result =  gp_camera_capture (gp_params.camera, type, &path, gp_params.context);
+		if(!glob_bulblength)
+			result =  gp_camera_capture (gp_params.camera, type, &path, gp_params.context);
+		else
+			result = set_config_action (&gp_params, "bulb", "1");
+
 		if (result != GP_OK) {
 			cli_error_print(_("Could not capture."));
 			return (result);
+		}
+		
+		expose_end_time = time (NULL) + glob_bulblength;	/*Set end time here, otherwise the time it takes to autofocus cuts into the exposure time */
+
+		if(glob_bulblength) {
+			CameraEventType type;
+			void *data = NULL;
+			waittime = expose_end_time - time(NULL);
+			while(waittime > 0) {
+				sleep(waittime);
+				waittime = expose_end_time - time(NULL);
+			}
+			result = set_config_action (&gp_params, "bulb", "0");
+			if (result != GP_OK) {
+				cli_error_print(_("Could not end capture (bulb mode)."));
+				return (result);
+			}
+			result = gp_camera_wait_for_event(gp_params.camera, 5000, &type, &data, gp_params.context);
+			if ((result != GP_OK) || (type != GP_EVENT_FILE_ADDED)) {
+				cli_error_print(_("Could not get filename (bulb mode)."));
+				return (result);
+			}
+			path = *(CameraFilePath *)data;
 		}
 
 		/* If my Canon EOS 10D is set to auto-focus and it is unable to
@@ -749,8 +785,9 @@ capture_generic (CameraCaptureType type, const char __unused__ *name, int downlo
 				if (!(gp_params.flags & FLAGS_QUIET) && glob_interval)
 					printf (_("not sleeping (%d seconds behind schedule)\n"), - waittime);
 			}
-			if (capture_now && (gp_params.flags & FLAGS_RESET_CAPTURE_INTERVAL))
+			if (capture_now && (gp_params.flags & FLAGS_RESET_CAPTURE_INTERVAL)) {
 				next_pic_time = time(NULL) + glob_interval;
+			}
 			else if (!capture_now) {
 				now = time(NULL) - glob_interval;
 				/*
@@ -910,6 +947,7 @@ typedef enum {
 	ARG_AUTO_DETECT,
 	ARG_CAPTURE_FRAMES,
 	ARG_CAPTURE_INTERVAL,
+	ARG_CAPTURE_BULB,
 	ARG_CAPTURE_IMAGE,
 	ARG_CAPTURE_IMAGE_AND_DOWNLOAD,
 	ARG_CAPTURE_MOVIE,
@@ -1139,6 +1177,9 @@ cb_arg_init (poptContext __unused__ ctx,
 		break;
 	case ARG_CAPTURE_INTERVAL:
 		glob_interval = atoi(arg);
+		break;
+	case ARG_CAPTURE_BULB:
+		glob_bulblength = atoi(arg);
 		break;
 
 	case ARG_VERSION:
@@ -1591,6 +1632,8 @@ main (int argc, char **argv, char **envp)
 		{"capture-preview", '\0', POPT_ARG_NONE, NULL,
 		 ARG_CAPTURE_PREVIEW,
 		 N_("Capture a quick preview"), NULL},
+		{"bulb", 'B', POPT_ARG_INT, NULL, ARG_CAPTURE_BULB,
+		 N_("Set bulb exposure time in seconds"), N_("SECONDS")},
 		{"frames", 'F', POPT_ARG_INT, NULL, ARG_CAPTURE_FRAMES,
 		 N_("Set number of frames to capture (default=infinite)"), N_("COUNT")},
 		{"interval", 'I', POPT_ARG_INT, NULL, ARG_CAPTURE_INTERVAL,
